adds ton of content, fixes responsive stuff ::bomb::

--- a/index.html
+++ b/index.html
@@ -1,84 +1,219 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width">
-
-        <link rel="stylesheet" href="css/normalize.min.css">
-        <link rel="stylesheet" href="css/main.css">
-
-        <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
-    </head>
-    <body>
-        <!--[if lt IE 7]>
-            <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
-        <![endif]-->
-
-        <div class="header-container">
-            <header class="wrapper clearfix">
-                <h1 class="title">h1.title</h1>
-                <nav>
-                    <ul>
-                        <li><a href="#">nav ul li a</a></li>
-                        <li><a href="#">nav ul li a</a></li>
-                        <li><a href="#">nav ul li a</a></li>
-                    </ul>
-                </nav>
-            </header>
-        </div>
-
-        <div class="main-container">
-            <div class="main wrapper clearfix">
-
-                <article>
-                    <header>
-                        <h1>article header h1</h1>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec.</p>
-                    </header>
-                    <section>
-                        <h2>article section h2</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor. Etiam ullamcorper lorem dapibus velit suscipit ultrices. Proin in est sed erat facilisis pharetra.</p>
-                    </section>
-                    <section>
-                        <h2>article section h2</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor. Etiam ullamcorper lorem dapibus velit suscipit ultrices. Proin in est sed erat facilisis pharetra.</p>
-                    </section>
-                    <footer>
-                        <h3>article footer h3</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor.</p>
-                    </footer>
-                </article>
-
-                <aside>
-                    <h3>aside</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor. Etiam ullamcorper lorem dapibus velit suscipit ultrices.</p>
-                </aside>
-
-            </div> <!-- #main -->
-        </div> <!-- #main-container -->
-
-        <div class="footer-container">
-            <footer class="wrapper">
-                <h3>footer</h3>
-            </footer>
-        </div>
-
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.9.0.min.js"><\/script>')</script>
-
-        <script src="js/main.js"></script>
-
-        <script>
-            var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
-            (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-            g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
-            s.parentNode.insertBefore(g,s)}(document,'script'));
-        </script>
-    </body>
+<!--[if lt IE 7]> <html lang="en" class="no-js ie6"> <![endif]-->
+<!--[if IE 7]>    <html lang="en" class="no-js ie7"> <![endif]-->
+<!--[if IE 8]>    <html lang="en" class="no-js ie8"> <![endif]-->
+<!--[if gt IE 8]><!-->
+<html class='no-js' lang='en'>
+<!--<![endif]-->
+<head>
+<meta charset='utf-8'>
+<meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible'>
+<title></title>
+<meta content='' name=''>
+<meta content='' name=''>
+<meta content='width=device-width, initial-scale=1.0' name='viewport'>
+<link href='css/normalize.min.css' rel='stylesheet'>
+<link href='css/main.css?v=1' rel='stylesheet'>
+<script src='js/vendor/modernizr-2.6.2-respond-1.1.0.min.js'></script>
+</head>
+<body>
+<!--[if lt IE 7]>
+<p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
+<![endif]-->
+<div class='header-container'>
+<header class='wrapper clearfix'>
+<h1 class='logo ir'>Deutsche Telekom</h1>
+<h2 class='logoclaim ir'>Life is for sharing.</h2>
+<nav>
+<ul class='main-nav'>
+<li>
+<a href='#'>Deutsche Telekom for MVNOs</a>
+</li>
+<li>
+<a href='#'>Selected Segments</a>
+</li>
+<li>
+<a href='#'>Business Models</a>
+</li>
+<li>
+<a href='#'>Contact Us</a>
+</li>
+<li class='filler'></li>
+</ul>
+</nav>
+</header>
+</div>
+<div class='main-container'>
+<div class='main wrapper clearfix'>
+<article class='clearfix'>
+<header>
+<h1>Deutsche Telekom for MVNOs</h1>
+<p class='intro'>
+Deutsche Telekom is one of the world's leading integrated telecommunications companies.
+We operate mobile networks in 15 European countries as well as the US and offer the only
+cross-Atlantic mobile telecommunications footprint in the world.
+</p>
+</header>
+<section class='span2'>
+<p>
+Our goal is to innovate our industry and provide our customers with the best possible service.
+We believe that partnerships are essential to achieving this objective and enabling Mobile Virtual
+Network Operators (MVNOs) is one the most important partnership forms in our strategy
+to achieve this objective.
+</p>
+</section>
+<section class='span2'>
+<p>
+We are  one of the pioneers in the Virtual Operator field and we host a number of the most
+successful MVNOs of the world on our networks. Our extensive experience and knowledge means
+that we can provide our partners with the best possible support to drive successful entry
+in the communications space.
+</p>
+</section>
+</article>
+<article class='clearfix'>
+<section class='span3'>
+<noscript class='responsivize' data-fullsrc='img/content-business.jpg' data-mobilesrc='img/content-business-140.jpg'>
+<img src='img/content-business-140.jpg'>
+</noscript>
+</section>
+<section class='span3'>
+<noscript class='responsivize' data-fullsrc='img/content-youth.jpg' data-mobilesrc='img/content-youth-140.jpg'>
+<img src='img/content-youth-140.jpg'>
+</noscript>
+</section>
+<section class='span3'>
+<noscript class='responsivize' data-fullsrc='img/content-ethnic.jpg' data-mobilesrc='img/content-ethnic-140.jpg'>
+<img src='img/content-ethnic-140.jpg'>
+</noscript>
+</section>
+</article>
+<hr>
+<article class='clearfix segments'>
+<header>
+<h1>Selected Segments</h1>
+<p>
+Offering mobile services allows our partners to monetize existing assets
+and make existing products and services more compelling. If you are active
+in one of the following industries, there is  significant potential in partnering
+with us to offer mobile telecommunications services. There is also potential
+beyond these industries, and no limit to the innovation potential of MVNO services!
+</p>
+</header>
+<section class='span3'>
+<h2>Retailers</h2>
+<div class='vector bordered'>
+<img src='img/pic_retailers.svg'>
+</div>
+<ul>
+<li>Increase footfall in own points of sales</li>
+<li>Improve loyalty of customer base with cross segment/category campaigns</li>
+<li>Exploit revenues from mobile services and devices</li>
+</ul>
+</section>
+<section class='span3'>
+<h2>Ethnic Brands</h2>
+<div class='vector bordered'>
+<img src='img/pic_ethnic_brands.svg'>
+</div>
+<ul>
+<li>Monetize international calling routes and customer base</li>
+<li>Provide best value mobile service for international calls</li>
+<li>Target ethnic groups with individual mobile services</li>
+</ul>
+</section>
+<section class='span3'>
+<h2>Youth Brands</h2>
+<div class='vector bordered'>
+<img src='img/pic_youth_brands.svg'>
+</div>
+<ul>
+<li>Monetize brand awareness and media reach in teenagers and young adults segment</li>
+<li>Grow customers' brand interaction time and content consumption</li>
+<li>Stimulate brand loyalty</li>
+</ul>
+</section>
+</article>
+<article class='clearfix segments'>
+<section class='span3'>
+<h2>Social Networks</h2>
+<div class='vector bordered'>
+<img src='img/pic_social_networks.svg'>
+</div>
+<ul>
+<li>Provide specific price propositions for the mobile social network usage</li>
+<li>Monetize user base by adding social commerce and service extras</li>
+<li>Encourage user stickiness by integrating mobile services into core of brand proposition</li>
+</ul>
+</section>
+<section class='span3'>
+<h2>Fixed Operators</h2>
+<div class='vector bordered'>
+<img src='img/pic_fixed_operators.svg'>
+</div>
+<ul>
+<li>Provide full telecommunications portfolio to subscriber base</li>
+<li>Reduce churn by offering multi-play bundles</li>
+<li>Leverage existing network assets to provide integrated services</li>
+</ul>
+</section>
+<section class='span3'>
+<h2>Data</h2>
+<div class='vector bordered'>
+<img src='img/pic_data.svg'>
+</div>
+<ul>
+<li>Improve product appeal by bundling devices and connectivity</li>
+<li>Offer advanced services (e.g. M2M, maintenance service)</li>
+<li>Add continuous service revenues to one-time device sales revenues</li>
+</ul>
+</section>
+</article>
+<hr>
+<article class='clearfix'>
+<header>
+<h1>MVNO Business Models</h1>
+</header>
+<section>
+<p>
+We are experienced in large a variety of business models, complementing our
+partners' assets, competencies and investments. Jointly with our partners,
+we select the best fitting commercial and technical set-up for each co-operation.
+</p>
+<p>
+Our solution portfolio ranges from brand licensing/branded reselling to national
+roaming - and includes any model in between. In the first case we operationally
+manage the whole mobile service delivery and rely on our partners' branding and
+marketing assets, in the latter case our partner runs an own mobile (core) network.
+</p>
+</section>
+<section class='span3 boxed dark'>
+<h3>
+Branded Resale/
+Brand Licensing
+</h3>
+<p>
+For partners for whom telco is
+suitable brand extension, but
+not a core business.
+</p>
+<h4>Our main contribution</h4>
+<ul>
+<li>Mobile network services</li>
+<li>Numbering, roaming</li>
+<li>Operations and business support</li>
+<li>Product management</li>
+</ul>
+</section>
+</article>
+</div>
+</div>
+<div class='footer-container'>
+<footer class='wrapper'>
+<h3>Footer goes here</h3>
+</footer>
+</div>
+<script src='js/vendor/jquery-1.9.0.min.js'></script>
+<script src='js/main.js'></script>
+</body>
 </html>
