--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
 <nav>
 <ul class='main-nav'>
 <li>
-<a href='#'>Deutsche Telekom for MVNOs</a>
+<a href='#' id='link1'>Deutsche Telekom for MVNOs</a>
 </li>
 <li>
-<a href='#'>Selected Segments</a>
+<a href='#' id='link2'>Selected Segments</a>
 </li>
 <li>
-<a href='#'>Business Models</a>
+<a href='#' id='link3'>Business Models</a>
 </li>
 <li>
-<a href='#'>Contact Us</a>
+<a href='#' id='link4'>Contact Us</a>
 </li>
 <li class='filler'></li>
 </ul>
@@ -49,70 +49,72 @@
 <header>
 <h1>Deutsche Telekom for MVNOs</h1>
 <p class='intro'>
-Deutsche Telekom is one of the world's leading integrated telecommunications companies.
-We operate mobile networks in 15 European countries as well as the US and offer the only
-cross-Atlantic mobile telecommunications footprint in the world.
+Deutsche Telekom is one of the world's leading integrated telecommunications
+companies. We operate mobile networks in 15 European countries as well as the
+US and offer the only cross-Atlantic mobile telecommunications footprint in the world.
 </p>
 </header>
 <section class='span2'>
 <p>
-Our goal is to innovate our industry and provide our customers with the best possible service.
-We believe that partnerships are essential to achieving this objective and enabling Mobile Virtual
-Network Operators (MVNOs) is one the most important partnership forms in our strategy
-to achieve this objective.
+Our goal is to innovate our industry and provide our customers with the best
+possible service. Essential to achieving this objective are strong partnerships,
+of which one of the most important is the enablement of Mobile Virtual Network Operators (MVNOs).
 </p>
 </section>
 <section class='span2'>
 <p>
-We are  one of the pioneers in the Virtual Operator field and we host a number of the most
-successful MVNOs of the world on our networks. Our extensive experience and knowledge means
-that we can provide our partners with the best possible support to drive successful entry
-in the communications space.
+We are a pioneer in the Virtual Operator field and host a number of the world's
+most successful MVNOs on our networks. With our extensive knowledge, we give
+our partners the support they need to successfully enter the telecommunications space.
 </p>
 </section>
 </article>
 <article class='clearfix'>
-<section class='span3'>
+<section class='span3 imgspan3'>
 <noscript class='responsivize' data-fullsrc='img/content-business.jpg' data-mobilesrc='img/content-business-140.jpg'>
 <img src='img/content-business-140.jpg'>
 </noscript>
 </section>
-<section class='span3'>
-<noscript class='responsivize' data-fullsrc='img/content-youth.jpg' data-mobilesrc='img/content-youth-140.jpg'>
-<img src='img/content-youth-140.jpg'>
-</noscript>
-</section>
-<section class='span3'>
+<section class='span3 imgspan3'>
 <noscript class='responsivize' data-fullsrc='img/content-ethnic.jpg' data-mobilesrc='img/content-ethnic-140.jpg'>
 <img src='img/content-ethnic-140.jpg'>
 </noscript>
 </section>
+<section class='span3 imgspan3'>
+<noscript class='responsivize' data-fullsrc='img/content-youth.jpg' data-mobilesrc='img/content-youth-140.jpg'>
+<img src='img/content-youth-140.jpg'>
+</noscript>
+</section>
 </article>
 <hr>
-<article class='clearfix segments'>
+<article class='clearfix segments selected-segments'>
 <header>
 <h1>Selected Segments</h1>
 <p>
-Offering mobile services allows our partners to monetize existing assets
-and make existing products and services more compelling. If you are active
-in one of the following industries, there is  significant potential in partnering
-with us to offer mobile telecommunications services. There is also potential
-beyond these industries, and no limit to the innovation potential of MVNO services!
+By offering mobile services, our partner's products and services become more
+compelling and existing assets can be monetized. If you are active in one of
+the following industries, there is significant potential in partnering with us to
+offer mobile telecommunications services. Beyond these fields there are limitless
+innovation possibilities with MVNO services!
 </p>
 </header>
 <section class='span3'>
 <h2>Retailers</h2>
+<div class='spanwrapper'>
 <div class='vector bordered'>
 <img src='img/pic_retailers.svg'>
 </div>
 <ul>
-<li>Increase footfall in own points of sales</li>
+<li>Increase points of sales footfall</li>
 <li>Improve loyalty of customer base with cross segment/category campaigns</li>
 <li>Exploit revenues from mobile services and devices</li>
 </ul>
+</div>
+<hr>
 </section>
 <section class='span3'>
 <h2>Ethnic Brands</h2>
+<div class='spanwrapper'>
 <div class='vector bordered'>
 <img src='img/pic_ethnic_brands.svg'>
 </div>
@@ -121,33 +123,42 @@ beyond these industries, and no limit to the innovation potential of MVNO servic
 <li>Provide best value mobile service for international calls</li>
 <li>Target ethnic groups with individual mobile services</li>
 </ul>
+</div>
+<hr>
 </section>
 <section class='span3'>
 <h2>Youth Brands</h2>
+<div class='spanwrapper'>
 <div class='vector bordered'>
 <img src='img/pic_youth_brands.svg'>
 </div>
 <ul>
-<li>Monetize brand awareness and media reach in teenagers and young adults segment</li>
+<li>Monetize brand awareness and media reach with teenager and young adult segments</li>
 <li>Grow customers' brand interaction time and content consumption</li>
 <li>Stimulate brand loyalty</li>
 </ul>
+</div>
+<hr>
 </section>
 </article>
 <article class='clearfix segments'>
 <section class='span3'>
 <h2>Social Networks</h2>
+<div class='spanwrapper'>
 <div class='vector bordered'>
 <img src='img/pic_social_networks.svg'>
 </div>
 <ul>
-<li>Provide specific price propositions for the mobile social network usage</li>
+<li>Provide specific propositions for mobile social network use</li>
 <li>Monetize user base by adding social commerce and service extras</li>
-<li>Encourage user stickiness by integrating mobile services into core of brand proposition</li>
+<li>Encourage user loyalty by integrating mobile services into core brand proposition</li>
 </ul>
+</div>
+<hr>
 </section>
 <section class='span3'>
 <h2>Fixed Operators</h2>
+<div class='spanwrapper'>
 <div class='vector bordered'>
 <img src='img/pic_fixed_operators.svg'>
 </div>
@@ -156,9 +167,12 @@ beyond these industries, and no limit to the innovation potential of MVNO servic
 <li>Reduce churn by offering multi-play bundles</li>
 <li>Leverage existing network assets to provide integrated services</li>
 </ul>
+</div>
+<hr>
 </section>
 <section class='span3'>
 <h2>Data</h2>
+<div class='spanwrapper'>
 <div class='vector bordered'>
 <img src='img/pic_data.svg'>
 </div>
@@ -167,36 +181,40 @@ beyond these industries, and no limit to the innovation potential of MVNO servic
 <li>Offer advanced services (e.g. M2M, maintenance service)</li>
 <li>Add continuous service revenues to one-time device sales revenues</li>
 </ul>
+</div>
+<hr>
 </section>
 </article>
 <hr>
-<article class='clearfix'>
+<article class='clearfix business-models'>
 <header>
 <h1>MVNO Business Models</h1>
 </header>
 <section>
 <p>
-We are experienced in large a variety of business models, complementing our
-partners' assets, competencies and investments. Jointly with our partners,
-we select the best fitting commercial and technical set-up for each co-operation.
+We have experience with a large variety of business models that complement
+our partners' assets, competencies and investments. Together with our partners,
+we select the most appropriate commercial and technical set-up for each project.
 </p>
 <p>
 Our solution portfolio ranges from brand licensing/branded reselling to national
-roaming - and includes any model in between. In the first case we operationally
+roaming - and includes any model in-between. In the first case, we operationally
 manage the whole mobile service delivery and rely on our partners' branding and
-marketing assets, in the latter case our partner runs an own mobile (core) network.
+marketing assets. In the latter case, our partners run their own mobile (core) network.
 </p>
 </section>
-<section class='span3 boxed dark'>
+<div class='fixed-height-wrapper clearfix'>
+<section class='span3 fixed'>
+<div class='boxed dark'>
 <h3>
 Branded Resale/
-Brand Licensing
+<br>Brand Licensing</br>
 </h3>
 <p>
-For partners for whom telco is
-suitable brand extension, but
-not a core business.
+For partners where telco is a suitable brand extension,
+but not a core business.
 </p>
+<div class='spanwrapper'>
 <h4>Our main contribution</h4>
 <ul>
 <li>Mobile network services</li>
@@ -204,16 +222,158 @@ not a core business.
 <li>Operations and business support</li>
 <li>Product management</li>
 </ul>
+</div>
+</div>
+<div class='boxed fillerbox'>
+<h4>Partner's main contribution</h4>
+<ul>
+<li>Marketing, sales and distribution</li>
+<li>Brand and communication</li>
+</ul>
+</div>
 </section>
+<section class='span3 fixed'>
+<div class='boxed medium'>
+<h3>
+Light MVNO/
+<br>Service Provider</br>
+</h3>
+<p>
+For partners with telco experience who need autonomy in marketing
+and pricing.
+</p>
+<div class='spanwrapper'>
+<h4>Our main contribution</h4>
+<ul>
+<li>Mobile network services</li>
+<li>Numbering, roaming</li>
+<li>Operations and business support</li>
+</ul>
+</div>
+</div>
+<div class='boxed fillerbox'>
+<h4>Partner's main contribution</h4>
+<ul>
+<li>Operations and business support</li>
+<li>Marketing, sales and distribution</li>
+<li>Brand and communication</li>
+</ul>
+</div>
+</section>
+<section class='span3 fixed'>
+<div class='boxed light'>
+<h3>
+Full MVNO/
+<br>National Roaming</br>
+</h3>
+<p>For partners with significant telco experience and assets.</p>
+<div class='spanwrapper'>
+<h4>Our main contribution</h4>
+<ul>
+<li>Mobile (radio) network services</li>
+<li>Enabling services</li>
+</ul>
+</div>
+</div>
+<div class='boxed fillerbox'>
+<h4>Partner's main contribution</h4>
+<ul>
+<li>Core network services</li>
+<li>Numbering, roaming</li>
+<li>Operations and business support</li>
+<li>Marketing, sales and distribution</li>
+<li>Brand and communication</li>
+</ul>
+</div>
+</section>
+</div>
 </article>
 </div>
 </div>
-<div class='footer-container'>
-<footer class='wrapper'>
-<h3>Footer goes here</h3>
+<div class='footer-container clearfix'>
+<footer class='wrapper clearfix'>
+<h3>Contact Us</h3>
+<div class='contact'>
+<img class='profile' src='img/Foto_Peter_Hoffmann_SD.jpg'>
+<p class='top'>
+<strong>Peter Hoffmann</strong>
+<br>Vice President</br>
+<br>
+International Mobile Wholesale
+<br>Deutsche Telekom AG</br>
+53262 Bonn
+<br>
+<br>
+Phone: +49 228 181-18765
+<br>
+E-Mail:
+<a href='mailto:mvno@telekom.de'>mvno@telekom.de</a>
+<br>
+</br>
+</p>
+<p>
+We offer the only transatlantic mobile communications footprint,
+covering 15 European countries and the US.
+</p>
+<p>
+If you are interested in becoming an MVNO hosted by one of our
+mobile operations, please contact us!
+</p>
+<p>
+We are happy to discuss your business idea with you, and look into
+how we can support you to make it a success.
+</p>
+</div>
+<div class='countryinfo clearfix'>
+<p>Are you looking for more specific information for a specific country?</p>
+<select onchange='if (this.value) window.location.href=this.value'>
+<option value=''>Choose a destination ...</option>
+<option value='http://www.amc.al/'>Albania: AMC</option>
+<option value='http://www.t-mobile.at/'>Austria: T-Mobile Austria</option>
+<option value='http://www.globul.bg/eng/'>Bulgaria: Globul</option>
+<option value='http://www.t.ht.hr/eng'>Croatia: T-Hrvatski Telekom</option>
+<option value='http://www.t-mobile.cz/'>Czech Republic: T-Mobile Czech Republic</option>
+<option value='http://www.telekom.de/'>Germany: Telekom Deutschland</option>
+<option value='http://www.cosmote.gr/'>Greece: Cosmote</option>
+<option value='http://www.t-mobile.hu/'>Hungary: Magyar Telekom</option>
+<option value='http://www.t-mobile.com.mk/'>Macedonia: Makedonski Telekom</option>
+<option value='http://www.telekom.me/'>Montenegro: Crnogorski Telekom</option>
+<option value='http://www.t-mobile.nl/'>Netherlands: T-Mobile Netherlands</option>
+<option value='http://www.t-mobile.pl/en/'>Poland: T-Mobile Poland</option>
+<option value='http://www.slovaktelekom.sk/'>Slovakia: Slovak Telekom</option>
+<option value='http://www.cosmote.ro/en/'>Romania: Cosmote Romania</option>
+<option value='http://everythingeverywhere.com/'>United Kingdom: Everything Everywhere</option>
+<option value='http://www.t-mobile.com/'>USA: T-Mobile USA</option>
+</select>
+<noscript class='responsivize' data-fullsrc='img/Map_HD.png' data-mobilesrc='img/Map_HD.png' hiressrc='img/Map_HD.png'>
+<img src='img/Map_HD.png'>
+</noscript>
+</div>
+<div class='clearfix'></div>
+<div class='footerlinks'>
+<p class='copyright'>
+&copy;Deutsche Telekom, 2013
+<a href='#'>Privacy Policy</a>
+|
+<a href='#'>Legal Disclaimer</a>
+|
+<a href='#'>Imprint</a>
+</p>
+<p class='otherlinks'>
+Other Links:
+<a href='http://telekom.de'>Deutsche Telekom</a>
+|
+<a href='#'>ICSS</a>
+|
+<a href='#'>MNC</a>
+|
+<a href='#'>Machine-to-Machine (M2M)</a>
+</p>
+</div>
 </footer>
 </div>
 <script src='js/vendor/jquery-1.9.0.min.js'></script>
+<script src='js/vendor/jquery.smooth-scroll.min.js'></script>
 <script src='js/main.js'></script>
 </body>
 </html>
