content and scroller updates

--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
         <hr class='section-divider'>
         <article class='clearfix business-models'>
           <header>
-            <h1>MVNO Business Models</h1>
+            <h1>Business Models</h1>
             <p>
               We have experience with a large variety of business models that complement
               our partners' assets, competencies and investments. Together with our partners,
@@ -582,7 +582,7 @@
     </div>
     <div class='footer-container clearfix'>
       <footer class='wrapper clearfix'>
-        <h3>Contact Us</h3>
+        <h1>Contact Us</h1>
         <div class='contact'>
           <img alt='Peter Hoffmann' class='profile' height='171' src='img/peter-hoffmann.jpg' width='159'>
           <p class='top'>
