various content fixes

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
             </h3>
             <p>
               Deutsche Telekom uses state-of-the-art physical, electronic
-              and managerial methods and processesto protect the personal
+              and managerial methods and processes to protect the personal
               data you send us from unauthorized access and misuse.
             </p>
             <h3>
@@ -484,7 +484,9 @@
             </p>
             <p>
               Our solution portfolio ranges from brand licensing/branded reselling to national
-              roaming - and includes any model in-between. In the first case, we operationally
+              roaming - and includes any model
+              <span class='nowrap'>in-between.</span>
+              In the first case, we operationally
               manage the whole mobile service delivery and rely on our partners' branding and
               marketing assets. In the latter case, our partners run their own mobile (core) network.
             </p>
@@ -590,8 +592,8 @@
             <br>
             Vice President
             <br>
-            <br>
             International Mobile Wholesale
+            <br>
             <br>
             Deutsche Telekom AG
             <br>
