--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
             <p>
               Our solution portfolio ranges from brand licensing/branded reselling to national
               roaming - and includes any model
-              <span class='nowrap'>in-between.</span>
+              <span class='nowrap'>in&#8209;between.</span>
               In the first case, we operationally
               manage the whole mobile service delivery and rely on our partners' branding and
               marketing assets. In the latter case, our partners run their own mobile (core) network.
