--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
           <header>
             <h1>Selected Segments</h1>
             <p>
-              By offering mobile services, our partner's products and services become more
+              By offering mobile services, our partners' products and services become more
               compelling and existing assets can be monetized. If you are active in one of
               the following industries, there is significant potential in partnering with us to
               offer mobile telecommunications services. Beyond these fields there are limitless
@@ -483,7 +483,7 @@
           <header>
             <h1>Business Models</h1>
             <p>
-              We have experience with a large variety of business models that complement
+              We have experience with a large variety of MVNO business models that complement
               our partners' assets, competencies and investments. Together with our partners,
               we select the most appropriate commercial and technical set-up for each project.
             </p>
@@ -706,7 +706,7 @@
       </script>
       <noscript>
         <div>
-          <img alt='DCSIMG' height='1' id='DCSIMG' src='https://mvno.telekom.de/dcsxln2virb0sziiu1yfoaoee_6i5i/njs.gif?dcsuri=/nojavascript&amp;amp;WT.js=No&amp;amp;WT.tv=9.3.0' width='1'>
+          <img alt='DCSIMG' height='1' id='DCSIMG' src='https://www.wtpx-telekom.com/dcsxln2virb0sziiu1yfoaoee_6i5i/njs.gif?dcsuri=/nojavascript&amp;amp;WT.js=No&amp;amp;WT.tv=9.3.0' width='1'>
         </div>
       </noscript>
     </div>
