--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <div class='imprint-right'>
               <h3>Responsible:</h3>
               <p>
-                <strong>Ursula Knipp</strong>
+                Ursula Knipp
                 <br>
                 <br>
                 Deutsche Telekom AG
