updates new design on homepage without responsive

--- a/index.html
+++ b/index.html
@@ -297,205 +297,142 @@
       <div class='main wrapper clearfix content maincontent'>
         <article class='clearfix'>
           <header>
-            <h1>Deutsche Telekom for MVNOs</h1>
-            <p class='intro'>
-              Deutsche Telekom is one of the world's leading integrated telecommunications
-              companies. We operate mobile networks in 15 European countries as well as the
-              US and offer the only cross-Atlantic mobile telecommunications footprint in the world.
-            </p>
+            <h1>
+              Deutsche Telekom For
+              <span>Mobile virtual network operators</span>
+            </h1>
+            <img src='img/title-mobile-virtual-network-operators.jpg' width='920'>
           </header>
-          <section class='span2'>
+          <section class='intro_copy'>
             <p>
-              Our goal is to innovate our industry and provide our customers with the best
-              possible service. Essential to achieving this objective are strong partnerships,
-              of which one of the most important is the enablement of Mobile Virtual Network Operators (MVNOs).
+              Deutsche Telekom is one of the world's leading integrated telecommunications companies. We operate mobile networks in 15 European countries as well as the US and offer the only cross-Atlantic mobile telecommunications footprint in the world.
             </p>
           </section>
-          <section class='span2'>
+          <section>
             <p>
-              We are a pioneer in the Virtual Operator field and host a number of the world's
-              most successful MVNOs on our networks. With our extensive knowledge, we give
-              our partners the support they need to successfully enter the telecommunications space.
+              Our goal is to innovate our industry and provide our customers with the best possible service. Essential to achieving this objective are strong partnerships, of which one of the most important is the enablement of Mobile Virtual Network Operators (MVNOs). We are a pioneer in the Virtual Operator field and host a number of the world's most successful MVNOs on our networks. With our extensive knowledge, we give our partners the support they need to successfully enter the telecommunications space.
             </p>
           </section>
         </article>
-        <article class='clearfix'>
-          <section class='span3 imgspan3'>
-            <img alt='Business' src='img/content-business.jpg'>
-          </section>
-          <section class='span3 imgspan3'>
-            <img alt='Ethnic' src='img/content-ethnic.jpg'>
-          </section>
-          <section class='span3 imgspan3'>
-            <img alt='Youth' src='img/content-youth.jpg'>
-          </section>
-        </article>
-        <hr>
         <article class='clearfix segments selected-segments'>
           <header>
-            <h1>Selected Segments</h1>
-            <p>
-              By offering mobile services, our partners' products and services become more
-              compelling and existing assets can be monetized. If you are active in one of
-              the following industries, there is significant potential in partnering with us to
-              offer mobile telecommunications services. Beyond these fields there are limitless
-              innovation possibilities with MVNO services!
-            </p>
-            <hr class='mobile-only'>
+            <h1>
+              Selected Segments
+            </h1>
+            <img src='img/title-selected-segments.jpg' width='920'>
           </header>
-          <section class='span3'>
-            <h2>Retailers</h2>
-            <div class='spanwrapper'>
-              <div class='vector bordered'>
-                <!--[if lte IE 8]>
-                <img alt='Retailers' src='img/pic_retailers.png'>
-                <![endif]-->
-                <!--[if gte IE 9]>
-                <img alt='Retailers' src='img/pic_retailers.svg'>
-                <![endif]-->
-                <!--[if !IE]><!-->
-                <img alt='Retailers' src='img/pic_retailers.svg'>
-                <!--<![endif]-->
-              </div>
-              <ul>
-                <li>Increase points of sales footfall</li>
-                <li>Improve loyalty of customer base with cross segment/category campaigns</li>
-                <li>Exploit revenues from mobile services and devices</li>
-              </ul>
-            </div>
-            <hr>
+          <section class='intro_copy'>
+            <p>
+              By offering mobile services, our partner's products and services become more compelling and existing assets can be monetized. If you are active in one of the following industries, there is significant potential in partnering with us to offer mobile telecommunications services. Beyond these fields there are limitless innovation possibilities with MVNO services!
+            </p>
           </section>
-          <section class='span3'>
-            <h2>Ethnic Brands</h2>
-            <div class='spanwrapper'>
-              <div class='vector bordered'>
-                <!--[if lte IE 8]>
-                <img alt='Ethnic Brands' src='img/pic_ethnic_brands.png'>
-                <![endif]-->
-                <!--[if gte IE 9]>
-                <img alt='Ethnic Brands' src='img/pic_ethnic_brands.svg'>
-                <![endif]-->
-                <!--[if !IE]><!-->
-                <img alt='Ethnic Brands' src='img/pic_ethnic_brands.svg'>
-                <!--<![endif]-->
+          <div class='clearfix'>
+            <section class='span3'>
+              <h2>Retailers</h2>
+              <div class='spanwrapper'>
+                <div class='vector'>
+                  <img alt='Retailers' src='img/pic_retailers.png' width='280'>
+                </div>
+                <ul>
+                  <li>Increase points of sales footfall</li>
+                  <li>Improve loyalty of customer base with cross segment/category campaigns</li>
+                  <li>Exploit revenues from mobile services and devices</li>
+                </ul>
               </div>
-              <ul>
-                <li>Monetize international calling routes and customer base</li>
-                <li>Provide best value mobile service for international calls</li>
-                <li>Target ethnic groups with individual mobile services</li>
-              </ul>
-            </div>
-            <hr>
-          </section>
-          <section class='span3'>
-            <h2>Youth Brands</h2>
-            <div class='spanwrapper'>
-              <div class='vector bordered'>
-                <!--[if lte IE 8]>
-                <img alt='Youth Brands' src='img/pic_youth_brands.png'>
-                <![endif]-->
-                <!--[if gte IE 9]>
-                <img alt='Youth Brands' src='img/pic_youth_brands.svg'>
-                <![endif]-->
-                <!--[if !IE]><!-->
-                <img alt='Youth Brands' src='img/pic_youth_brands.svg'>
-                <!--<![endif]-->
+              <hr>
+            </section>
+            <section class='span3'>
+              <h2>Ethnic Brands</h2>
+              <div class='spanwrapper'>
+                <div class='vector'>
+                  <img alt='Ethnic Brands' src='img/pic_ethnic_brands.png' width='280'>
+                </div>
+                <ul>
+                  <li>Monetize international calling routes and customer base</li>
+                  <li>Provide best value mobile service for international calls</li>
+                  <li>Target ethnic groups with individual mobile services</li>
+                </ul>
               </div>
-              <ul>
-                <li>Monetize brand awareness and media reach with teenager and young adult segments</li>
-                <li>Grow customers' brand interaction time and content consumption</li>
-                <li>Stimulate brand loyalty</li>
-              </ul>
-            </div>
-            <hr>
-          </section>
+              <hr>
+            </section>
+            <section class='span3'>
+              <h2>Youth Brands</h2>
+              <div class='spanwrapper'>
+                <div class='vector'>
+                  <img alt='Youth Brands' src='img/pic_youth_brands.png' width='280'>
+                </div>
+                <ul>
+                  <li>Monetize brand awareness and media reach with teenager and young adult segments</li>
+                  <li>Grow customers' brand interaction time and content consumption</li>
+                  <li>Stimulate brand loyalty</li>
+                </ul>
+              </div>
+              <hr>
+            </section>
+          </div>
+          <div class='clearfix'>
+            <section class='span3'>
+              <h2>Social Networks</h2>
+              <div class='spanwrapper'>
+                <div class='vector'>
+                  <img alt='Social Networks' src='img/pic_social_networks.png' width='280'>
+                </div>
+                <ul>
+                  <li>Provide specific propositions for mobile social network use</li>
+                  <li>Monetize user base by adding social commerce and service extras</li>
+                  <li>Encourage user loyalty by integrating mobile services into core brand proposition</li>
+                </ul>
+              </div>
+              <hr>
+            </section>
+            <section class='span3'>
+              <h2>Fixed Operators</h2>
+              <div class='spanwrapper'>
+                <div class='vector'>
+                  <img alt='Fixed Operators' src='img/pic_fixed_operators.png' width='280'>
+                </div>
+                <ul>
+                  <li>Provide full telecommunications portfolio to subscriber base</li>
+                  <li>Reduce churn by offering multi-play bundles</li>
+                  <li>Leverage existing network assets to provide integrated services</li>
+                </ul>
+              </div>
+              <hr>
+            </section>
+            <section class='span3'>
+              <h2>Data</h2>
+              <div class='spanwrapper'>
+                <div class='vector'>
+                  <img alt='Data' src='img/pic_data.png' width='280'>
+                </div>
+                <ul>
+                  <li>Improve product appeal by bundling devices and connectivity</li>
+                  <li>Offer advanced services (e.g. M2M, maintenance service)</li>
+                  <li>Add continuous service revenues to one-time device sales revenues</li>
+                </ul>
+              </div>
+              <hr>
+            </section>
+          </div>
         </article>
-        <article class='clearfix segments'>
-          <section class='span3'>
-            <h2>Social Networks</h2>
-            <div class='spanwrapper'>
-              <div class='vector bordered'>
-                <!--[if lte IE 8]>
-                <img alt='Social Networks' src='img/pic_social_networks.png'>
-                <![endif]-->
-                <!--[if gte IE 9]>
-                <img alt='Social Networks' src='img/pic_social_networks.svg'>
-                <![endif]-->
-                <!--[if !IE]><!-->
-                <img alt='Social Networks' src='img/pic_social_networks.svg'>
-                <!--<![endif]-->
-              </div>
-              <ul>
-                <li>Provide specific propositions for mobile social network use</li>
-                <li>Monetize user base by adding social commerce and service extras</li>
-                <li>Encourage user loyalty by integrating mobile services into core brand proposition</li>
-              </ul>
-            </div>
-            <hr>
-          </section>
-          <section class='span3'>
-            <h2>Fixed Operators</h2>
-            <div class='spanwrapper'>
-              <div class='vector bordered'>
-                <!--[if lte IE 8]>
-                <img alt='Fixed Operators' src='img/pic_fixed_operators.png'>
-                <![endif]-->
-                <!--[if gte IE 9]>
-                <img alt='Fixed Operators' src='img/pic_fixed_operators.svg'>
-                <![endif]-->
-                <!--[if !IE]><!-->
-                <img alt='Fixed Operators' src='img/pic_fixed_operators.svg'>
-                <!--<![endif]-->
-              </div>
-              <ul>
-                <li>Provide full telecommunications portfolio to subscriber base</li>
-                <li>Reduce churn by offering multi-play bundles</li>
-                <li>Leverage existing network assets to provide integrated services</li>
-              </ul>
-            </div>
-            <hr>
-          </section>
-          <section class='span3'>
-            <h2>Data</h2>
-            <div class='spanwrapper'>
-              <div class='vector bordered'>
-                <!--[if lte IE 8]>
-                <img alt='Data' src='img/pic_data.png'>
-                <![endif]-->
-                <!--[if gte IE 9]>
-                <img alt='Data' src='img/pic_data.svg'>
-                <![endif]-->
-                <!--[if !IE]><!-->
-                <img alt='Data' src='img/pic_data.svg'>
-                <!--<![endif]-->
-              </div>
-              <ul>
-                <li>Improve product appeal by bundling devices and connectivity</li>
-                <li>Offer advanced services (e.g. M2M, maintenance service)</li>
-                <li>Add continuous service revenues to one-time device sales revenues</li>
-              </ul>
-            </div>
-            <hr>
-          </section>
-        </article>
-        <hr class='section-divider'>
         <article class='clearfix business-models'>
           <header>
-            <h1>Business Models</h1>
-            <p>
-              We have experience with a large variety of MVNO business models that complement
-              our partners' assets, competencies and investments. Together with our partners,
-              we select the most appropriate commercial and technical set-up for each project.
-            </p>
-            <p>
-              Our solution portfolio ranges from brand licensing/branded reselling to national
-              roaming - and includes any model
-              <span class='nowrap'>in&#8209;between.</span>
-              In the first case, we operationally
-              manage the whole mobile service delivery and rely on our partners' branding and
-              marketing assets. In the latter case, our partners run their own mobile (core) network.
-            </p>
+            <h1>
+              Deutsche Telekom For
+              <span>Mobile virtual network operators</span>
+            </h1>
+            <img src='img/title-mobile-virtual-network-operators-business-models.jpg' width='920'>
           </header>
+          <section class='intro_copy'>
+            <p>
+              We have experience with a large variety of business models that complement our partners' assets, competencies and investments. Together with our partners, we select the most appropriate commercial and technical set-up for each project.
+            </p>
+          </section>
+          <section>
+            <p>
+              Our solution portfolio ranges from brand licensing/branded reselling to national roaming - and includes any model in-between. In the first case, we operationally manage the whole mobile service delivery and rely on our partners' branding and marketing assets. In the latter case, our partners run their own mobile (core) network.
+            </p>
+          </section>
           <section></section>
           <div class='fixed-height-wrapper clearfix'>
             <section class='span3 fixed'>
@@ -682,27 +619,21 @@
       <!-- Deutsche Telekom AG- Version 1.2 -->
       <!-- $DateTime: 2010/09/22 17:00:00 $ -->
       <script>
-        //<![CDATA[
-          if (typeof(_ed)!="undefined"){
-            _ed.ed_sv = "1.2_" + window.location.hostname; 
-            if (typeof(_ed.init_an)=="function"){_ed.init_an();}
-          }
-        //]]>
+        if (typeof(_ed)!="undefined"){
+          _ed.ed_sv = "1.2_" + window.location.hostname; 
+          if (typeof(_ed.init_an)=="function"){_ed.init_an();}
+        }
       </script>
       <script>
-        //<![CDATA[
-          var _tag=new WebTrends(); 
-          _tag.dcsGetId();
-        //]]>
+        var _tag=new WebTrends(); 
+        _tag.dcsGetId();
       </script>
       <script>
-        //<![CDATA[
-          _tag.dcsCustom=function(){
-            // Add custom parameters here.
-            //_tag.DCSext.param_name=param_value;
-          }
-          _tag.dcsCollect();
-        //]]>
+        _tag.dcsCustom=function(){
+          // Add custom parameters here.
+          //_tag.DCSext.param_name=param_value;
+        }
+        _tag.dcsCollect();
       </script>
       <noscript>
         <div>
