final css update

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
         </nav>
       </header>
       <div class='mini-nav-wrapper'>
+        <p>Navigation:</p>
         <select class='mini-nav'>
           <option value=''>Please choose ...</option>
           <option value='1'>Deutsche Telekom for MVNOs</option>
@@ -69,15 +70,11 @@
           <option value='3'>Business Models</option>
           <option value='4'>Contact Us</option>
         </select>
-        <p>Navigation:</p>
       </div>
     </div>
     <div class='main-container'>
       <div class='imprint content subcontent wrapper clearfix'>
         <article class='clearfix'>
-          <header>
-            <h1>Imprint</h1>
-          </header>
           <section class='clearfix'>
             <div class='imprint-left'>
               <h3>Address:</h3>
@@ -147,9 +144,6 @@
       </div>
       <div class='legaldisclaimer content subcontent wrapper clearfix'>
         <article class='clearfix'>
-          <header>
-            <h1>Disclaimer</h1>
-          </header>
           <section class='clearfix'>
             <p>
               Deutsche Telekom AG in no way guarantees that the
@@ -301,7 +295,8 @@
               Deutsche Telekom For
               <span>Mobile virtual network operators</span>
             </h1>
-            <img src='img/title-mobile-virtual-network-operators.jpg' width='920'>
+            <img class='desktop-block' src='img/title-mobile-virtual-network-operators.jpg' width='100%'>
+            <img class='mobile-block' src='img/title-mobile-virtual-network-operators-mobile.jpg' width='100%'>
           </header>
           <section class='intro_copy'>
             <p>
@@ -319,7 +314,8 @@
             <h1>
               Selected Segments
             </h1>
-            <img src='img/title-selected-segments.jpg' width='920'>
+            <img class='desktop-block' src='img/title-selected-segments.jpg' width='100%'>
+            <img class='mobile-block' src='img/title-selected-segments-mobile.jpg' width='100%'>
           </header>
           <section class='intro_copy'>
             <p>
@@ -331,7 +327,7 @@
               <h2>Retailers</h2>
               <div class='spanwrapper'>
                 <div class='vector'>
-                  <img alt='Retailers' src='img/pic_retailers.png' width='280'>
+                  <img alt='Retailers' src='img/pic_retailers.png' width='100%'>
                 </div>
                 <ul>
                   <li>Increase points of sales footfall</li>
@@ -345,7 +341,7 @@
               <h2>Ethnic Brands</h2>
               <div class='spanwrapper'>
                 <div class='vector'>
-                  <img alt='Ethnic Brands' src='img/pic_ethnic_brands.png' width='280'>
+                  <img alt='Ethnic Brands' src='img/pic_ethnic_brands.png' width='100%'>
                 </div>
                 <ul>
                   <li>Monetize international calling routes and customer base</li>
@@ -359,7 +355,7 @@
               <h2>Youth Brands</h2>
               <div class='spanwrapper'>
                 <div class='vector'>
-                  <img alt='Youth Brands' src='img/pic_youth_brands.png' width='280'>
+                  <img alt='Youth Brands' src='img/pic_youth_brands.png' width='100%'>
                 </div>
                 <ul>
                   <li>Monetize brand awareness and media reach with teenager and young adult segments</li>
@@ -375,7 +371,7 @@
               <h2>Social Networks</h2>
               <div class='spanwrapper'>
                 <div class='vector'>
-                  <img alt='Social Networks' src='img/pic_social_networks.png' width='280'>
+                  <img alt='Social Networks' src='img/pic_social_networks.png' width='100%'>
                 </div>
                 <ul>
                   <li>Provide specific propositions for mobile social network use</li>
@@ -389,7 +385,7 @@
               <h2>Fixed Operators</h2>
               <div class='spanwrapper'>
                 <div class='vector'>
-                  <img alt='Fixed Operators' src='img/pic_fixed_operators.png' width='280'>
+                  <img alt='Fixed Operators' src='img/pic_fixed_operators.png' width='100%'>
                 </div>
                 <ul>
                   <li>Provide full telecommunications portfolio to subscriber base</li>
@@ -403,7 +399,7 @@
               <h2>Data</h2>
               <div class='spanwrapper'>
                 <div class='vector'>
-                  <img alt='Data' src='img/pic_data.png' width='280'>
+                  <img alt='Data' src='img/pic_data.png' width='100%'>
                 </div>
                 <ul>
                   <li>Improve product appeal by bundling devices and connectivity</li>
@@ -411,7 +407,6 @@
                   <li>Add continuous service revenues to one-time device sales revenues</li>
                 </ul>
               </div>
-              <hr>
             </section>
           </div>
         </article>
@@ -421,7 +416,8 @@
               Deutsche Telekom For
               <span>Mobile virtual network operators</span>
             </h1>
-            <img src='img/title-mobile-virtual-network-operators-business-models.jpg' width='920'>
+            <img class='desktop-block' src='img/title-mobile-virtual-network-operators-business-models.jpg' width='100%'>
+            <img class='mobile-block' src='img/title-mobile-virtual-network-operators-business-models-mobile.jpg' width='100%'>
           </header>
           <section class='intro_copy'>
             <p>
@@ -606,7 +602,7 @@
             |
             <a href='#' id='link-imprint'>Imprint</a>
             <span class='copyrightline'>
-              &copy;Deutsche Telekom, 2013
+              &copy;Deutsche Telekom, 2014
             </span>
           </p>
         </div>
